--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <title>Great Idea - Responsive I</title>
 
@@ -16,14 +17,18 @@
   <header class = "header">
   
     <nav class="nav_menu"> 
+      <div>
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
         <a href="#">Features</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
-      
+      </div>
+
+      <div>
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </div>
       </nav>
   
   <section class = "top">
