added media queries (500px)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class = "header">
   
     <nav class="nav_menu"> 
-      <div>
+      <div class = "links">
         <a href="services.html">Services</a>
         <a href="#">Product</a>
         <a href="#">Vision</a>
@@ -74,23 +74,25 @@
   <section class = "bottom-content">
     <div class="text-container">
   <h2>Services</h2>
-  <p>Aliquam elementum magna eros, ac<br> 
-    posuere elvit tempus et. Suspendisse vel<br> 
-    tempus odio, in interdutm nisi.<br> 
-    Suspendisse eu ornare nisl.Nullam<br> 
-    convallis augue justo, at imperdiet metus<br>
-    scelerisque quis.</p>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br>
+    Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. 
+    Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.
+  </p>
   </div>
 
   <div class ="text-container">
       <h2>Product</h2>
-  <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-  </div>
+      <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br>
+        Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. 
+        Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.
+      </p>  </div>
 
   <div class="text-container"> 
   <h2>Vision</h2>
-  <p>Aliquam elementum magna eros, ac<br> posuere elvit tempus et. Suspendisse vel<br> tempus odio, in interdutm nisi.<br> Suspendisse eu ornare nisl. Nullam<br> convallis augue justo, at imperdiet metus<br> scelerisque quis.</p>
-  </div>
+  <p>Aliquam elementum magna eros, ac posuere elvit tempus et.<br>
+    Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu<br> ornare nisl. 
+    Nullam convallis augue justo, at imperdiet metus<br> scelerisque quis.
+  </p>  </div>
 </section>
 
 <section>
